# tensorrt_wrapper_for_onnx

./: CMakeLists.txt  README.md  hfnet_github_graph.json  tensorrt_engine.cpp  tensorrt_engine.hpp  test_json.cpp  utils.hpp  weights_graph_parse.cpp  weights_graph_parse.hpp
cuda_impl/: convert_cuda_impl.cu  convert_cuda_impl.hpp  nonzero_cuda_impl.cu  nonzero_cuda_impl.hpp
node_create/: create_activation_node.cpp  create_activation_node.hpp  create_conv2d_node.cpp  create_conv2d_node.hpp  create_elementwise_node.cpp  create_elementwise_node.hpp  create_identity_node.cpp  create_identity_node.hpp  create_node.cpp  create_node.hpp  create_nonzero_node.cpp  create_nonzero_node.hpp  create_padding_node.cpp  create_padding_node.hpp  create_pooling_node.cpp  create_pooling_node.hpp  create_reduce_node.cpp  create_reduce_node.hpp  create_shuffle_node.cpp  create_shuffle_node.hpp  create_slice_node.cpp  create_slice_node.hpp  create_softmax_node.cpp  create_softmax_node.hpp  create_unary_node.cpp  create_unary_node.hpp
node_create/plugin/: nonzero_plugin.cu  nonzero_plugin.hpp
node_info/: activation_node_info.cpp  activation_node_info.hpp  conv2d_node_info.cpp  conv2d_node_info.hpp  elementwise_node_info.cpp  elementwise_node_info.hpp  identity_node_info.cpp  identity_node_info.hpp  node_info.cpp  node_info.hpp  nonzero_node_info.cpp  nonzero_node_info.hpp  padding_node_info.cpp  padding_node_info.hpp  pooling_node_info.cpp  pooling_node_info.hpp  reduce_node_info.cpp  reduce_node_info.hpp  shuffle_node_info.cpp  shuffle_node_info.hpp  slice_node_info.cpp  slice_node_info.hpp  softmax_node_info.cpp  softmax_node_info.hpp  unary_node_info.cpp  unary_node_info.hpp
python_scripts/: convert_fp32_to_fp16.py  onnx_edit.py  parse_fp16_onnx_model.py  save_onnx_weights.py  simplify_hfnet.py  test_hfnet.py
